[package]
name = "ns-monitor"
version = "0.1.0"
edition = "2024"
authors = ["CalunVier"]
description = "Monitor outgoing NS packets on master interface and forward ping6 to slave interfaces"


[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
daemonize = "0.5.0"
env_logger = "0.11.8"
libc = "0.2.149"
log = "0.4.20"
nix = { version = "0.30.1", features = ["net"] }
socket2 = { version = "0.5.4", features = ["all"] }
tokio = { version = "1.32.0", features = ["full"] }
